Issue #000 feat: updated swarm-manager load balancer ip

--- a/ansible/inventory/env/group_vars/all.yml
+++ b/ansible/inventory/env/group_vars/all.yml
@@ -269,8 +269,8 @@ proxy_prometheus: false
 enable_scraping_docker_metrics: false
 postgres_exporter_postgres_port: 5432
 postgres_exporter_user: postgres_exporter
-sunbird_cs_base_url: "http://{{groups['swarm-manager'][0]}}:5000"
-sunbird_user_service_base_url: "http://{{groups['swarm-manager'][0]}}:9000"
+sunbird_cs_base_url: "http://{{sunbird_swarm_manager_lb_ip}}:5000"
+sunbird_user_service_base_url: "http://{{sunbird_swarm_manager_lb_ip}}:9000"
 kong_admin_api_url: http://localhost:8001
 
 postgresql_backup_azure_storage_account_name: "{{azure_account_name}}"
@@ -357,8 +357,8 @@ sunbird_device_register_api: "{{proto}}://{{api_proxy_name}}/v3/device/register/
 sunbird_course_batch_notification_signature: sunbird
 
 sunbird_authorization: "{{core_vault_sunbird_api_auth_token}}"
-sunbird_lms_base_url: "http://{{groups['swarm-manager'][0]}}:8000"
-sunbird_content_service_local_base_url: http://content-service:5000
+sunbird_lms_base_url: "http://{{sunbird_swarm_manager_lb_ip}}:8000"
+sunbird_content_service_local_base_url: "http://{{sunbird_swarm_manager_lb_ip}}:5000"
 sunbird_kafka_host: "{{sunbird_processing_kafka_host}}"
 sunbird_qrimage_topic: "{{env}}.qrimage.request"
 
@@ -628,7 +628,7 @@ sunbird_sso_kafka_topic: "{{env_name}}.lms.sso.events"
 __yarn_host__: "{{ groups['yarn-master'][0] }}"
 zookeepers: "{{groups['zookeeper']|join(':2181,')}}:2181"
 kafka_brokers: "{{groups['processing-cluster-kafka']|join(':9092,')}}:9092"
-__lms_host__: "http://{{ groups['swarm-manager'][0] }}:9000"
+__lms_host__: "http://{{sunbird_swarm_manager_lb_ip}}:9000"
 sunbird_redis_host: "{{ groups['lp-redis'][0] }}"
 
 
@@ -646,7 +646,7 @@ sunbird_google_android_keycloak_secret: ''
 sunbird_trampoline_android_keycloak_client_id: ''
 sunbird_trampoline_android_keycloak_secret: ''
 sunbird_android_keycloak_client_id: ''
-sunbird_user_org_api_base_url: http://learner-service:9000
+sunbird_user_org_api_base_url: http://{{sunbird_swarm_manager_lb_ip}}:9000
 
 ### Release-2.3.0 ###
 enc_entry_password: "{{core_vault_enc_entry_password}}" # encryption password for the enc service
