--- a/ansible/roles/stack-sunbird/defaults/main.yml
+++ b/ansible/roles/stack-sunbird/defaults/main.yml
@@ -32,7 +32,7 @@ sunbird_learner_service_base_url: http://api-manager_kong:8000/
 telemetry_replicas: 1
 telemetry_reservation_memory: 300M
 telemetry_limit_memory: 300M
-sunbird_telemetry_kafka_servers: "{{groups['kafka']|join(':9092,')}}:9092"
+sunbird_telemetry_kafka_servers: "{{groups['processing-kafka']|join(':9092,')}}:9092"
 sunbird_data_pipeline_kafka_servers: "{{groups['processing-cluster-kafka']|join(':9092,')}}:9092"
 
 player_replicas: 1
